text clipping resolved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,9 +10,15 @@
     .list-text-heading {
       @apply mb-6  font-semibold text-gray-900 uppercase dark:text-white;
     }
-    .headingTitle{
-      @apply flex justify-center text-4xl font-extrabold uppercase tracking-wider text-transparent bg-clip-text  m-[100px] bg-gradient-to-r from-teal-500 to-teal-300 text-transparent bg-clip-text text-center font-bold text-3xl p-2 sm:text-5xl lg:text-7xl leading-tight tracking-tighter
-    }
+    .headingTitle {
+      @apply flex justify-center text-3xl sm:text-5xl lg:text-7xl 
+          font-extrabold uppercase tracking-wide 
+          text-transparent bg-clip-text 
+          bg-gradient-to-r from-teal-500 to-teal-300 
+          text-center 
+          p-2 leading-tight 
+          max-w-[90%] mx-auto; /* Adjust width to fit mobile */
+  }
     .bg-image{
       @apply bg-[url('/logo.png')] bg-no-repeat bg-center bg-fixed bg-cover;
     }
